--- a/src/Components/PlayingScene.css
+++ b/src/Components/PlayingScene.css
@@ -1,32 +1,128 @@
-body,html{
-    display: grid;
-    height: 100%;
-    place-items: center;
-    background: #f2f2f2;
-    
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+
+}
+body{
+    font-family: 'Courier New', Courier, monospace;
+}
+.playingScene{
+    width: 100vw;
+    height: 100vh;
+    background: radial-gradient(circle, 
+    rgba(9,25,38,1) 0%,
+    rgba(13,13,13,1) 45%, 
+    rgba(1,22,64,1) 100%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-.playBox{
+.scoreBoard{
+    width: 700px;
+    border: 1px solid white;
+    border-radius: 15px;
+    margin-top: 50px;
+    height: 150px;
     display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+}
+.score{
+    width: 150px;
+    height: 114px;
+    background-color: white;
+    border-radius: 8px;
+    margin-right: 30px;
+    display: flex;
+    flex-direction: column;
     justify-content: center;
-    width: 100%;
-    margin-top: 450px;
-    border: 1px solid black;
+    align-items: center;
 }
-.playBox .itemContainer{
-    width: 880px;
-    padding: 10px;
-    margin: 5%;
+.title{
+    margin-left: 30px;
+}
+
+.score h1{
+    color: #565468;
+    font-size: 56px;
+}
+.score p{
+    color: #2a45c2;
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 19px;
+    letter-spacing: 2.5px;
+}
+/* *** Picked Card *** */
+.PickCont{
+    color: white;
+    height: 400px;
+    width: 100vw;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.pickedCard{
+    display: flex;
+    width: 153px;
+    height: 256px;
     text-align: center;
-    
+    border: 5px dashed white;
+    border-radius: 15px;
+    align-items: center;
+    justify-content: center;
 }
-.itemContainer .card img{
-    width: 200px;
+.player{
+    margin-left:200px;
 }
-.itemContainer .card{
+.enemy{
+margin-right: 200px;
+}
+
+.resultBox{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.resultBox h1{
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 20px;
+    font-weight: 600;
+}
+/** *** Cards Deck *** **/
+
+.cards{
+    width: 476px;
+    height: 430px;
+    display: flex;
+    margin-top: 0px;
+    justify-content: space-between;
+    align-items: center;
+
+}
+.cards img {
+    width: 150px;
+    height: 253px;
+}
+.cards .card{
+    height: 253px;
     cursor: pointer;
     transition: all 0.25s;
 }
-.itemContainer .card:hover{
-    transform: translate3d(0px,-10px,5px);
+
+.cards .card:hover{
+    transform: translate3d(0px,-10px,0px);
+}
+
+.rock{
+    box-shadow: 9px 13px 20px 0px #610238;
+}
+.scissors{
+    box-shadow: 9px 13px 20px 0px #525003;
+}
+.paper{
+    box-shadow: 9px 13px 20px 0px #004858;
 }
